# GreedySnake

./: .editorconfig  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  controller.cpp  controller.h  food.cpp  food.h  main.cpp  map.cpp  map.h  point.cpp  point.h  snake.cpp  snake.h  startInterface.cpp  startInterface.h  tools.cpp  tools.h
