file(GLOB SOURCES *.cpp)

add_executable(${PROJECT_NAME} ${SOURCES})

install(TARGETS ${PROJECT_NAME}
    RUNTIME DESTINATION bin
)

include(InstallRequiredSystemLibraries)

set(CPACK_GENERATOR "ZIP;NSIS")
set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "MyApp Installer")
set(CPACK_PACKAGE_VENDOR "YourCompany")
set(CPACK_PACKAGE_CONTACT "you@example.com")
set(CPACK_NSIS_DISPLAY_NAME "${PROJECT_VERSION} ${PROJECT_VERSION}")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "MyApp")
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}")

include(CPack)